* Add Serializable to all classes required for RMI clients (CC-582).  Investigated by Frank Zoontjens.

contrib
======================

distributed
----------------------
* Updated to use Jini v2.1, rearranged tree, and added upgrade notes to README.html for mixed environments.

build loop
======================

AlwaysBuild
----------------------
* Add support for property attribute

ClearCase
----------------------
* Detect ClearCase UCM stream rebases as modifications (CC-464). Patch by Scott Coplin.

CompositeBuilder
----------------------
* Fix reported build time.  Patch by Frederic Mockel. 

Compound
----------------------
* Add support for property attribute

CurrentBuildStatusPageListener
----------------------
* Add documentation for CurrentBuildStatusPageListener
* Fix validation messages when sourceFile invalid

default-plugins.properties
----------------------
* Change default element name for CompositeBuilder from "builders" to "composite".

ExecScript
----------------------
* Handle commands with spaces on Linux (CC-551).  Patch by Frederic Mockel.

HttpFile
----------------------
* Add support for property attribute to bring it in line with the documentation (CC-590)

Main
----------------------
* Add logging of root exception when config file fails to parse on load.

MKS
----------------------
* Fix synchronization failure on Linux (CC-576).

OSEnvironment
----------------------
* Fix for Windows Server 2003 and Java 5 (CC-573). Patch by Nate Austin

P4
----------------------
* Display modification time using local timezone if correctForServerTime is true (CC-574). Patch by Anatol Pomozov
* Add support for property attribute

Project
----------------------
* Fix NPE when there are multiple build threads and config.xml is reloaded during a build.

PropertyFileLabelIncrementer
----------------------
* PropertyFileLabelIncrementer uses specified property file, not the previous log file. (CC-519)  Patch by Chad Woolley and Joe Moore.

PVCS