@@ -2696,7 +2696,8 @@ password=P@ssW0rd!
             <tr>
                <td>property</td>
                <td>No</td>
-               <td>Unsupported!</td>
+               <td>Will set this property if a modification has occurred.  For
+               use in conditionally controlling the build later.</td>
             </tr>
             </tbody>
         </table>
